--- a/src/css/Offers.css
+++ b/src/css/Offers.css
@@ -5,4 +5,23 @@
     top:89px;
   }
   
- 
+  .FlexContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: baseline;
+    align-content: center;
+    width: 100%;
+    background-color: #2f1d58;
+    height: 80vh;
+    overflow: auto;
+    flex-direction: column;
+}
+
+.FlexContainer div {
+    width: 550px;
+    height: 281px;
+    margin: 11px;
+    background-color: lightblue;
+    
+}
