--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -20,6 +20,10 @@
   justify-content: space-around;
   align-items: center;
   list-style-type: none;
+  font-family: Arial, Helvetica, sans-serif;
+  color: rgb(255, 0, 0);
+
+
 }
 
 .searchBar{
