--- a/src/css/App.css
+++ b/src/css/App.css
@@ -7,6 +7,7 @@
 
 .FlexContainer {
   display: flex;
+  flex: 1;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -25,6 +26,10 @@
   background-color: lightblue;
 }
 
-
+.FlexContainer img{
+  display: flex;
+  flex-direction: row;
+  padding: 0px 0px 50px 0px ;
+}
 
 
