--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -8,6 +8,14 @@
   background-color: antiquewhite;
 }
 
+.tdesignimage{
+  position: absolute;
+width: 82px;
+height: 78px;
+left: 60px;
+top: 8px;
+}
+
 /* sticky nav bar */
 .sticky {
   position: fixed;
