--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -8,7 +8,12 @@
     
     }
 
-
+    .login2{
+      font-size: 40px;
+      text-align: center;
+      position: relative;
+      top:100px;
+    }
 form {
     --bg-light: #efefef;
     --bg-dark: #707070;
